--- a/src/pages/accomodation/accomodation.scss
+++ b/src/pages/accomodation/accomodation.scss
@@ -49,6 +49,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 20px;
     @include desktop {
     display: flex;
     flex-direction: column;
@@ -56,7 +57,6 @@
 }
 }
 .tag {
-    order: 2;
     background-color: $color-secondary;
     color: white;
     border-radius: 5px;
@@ -74,10 +74,10 @@
 }
 }
 
+
 .stars {
     img {
             height: 24px;
-            margin-top: 20px;
 
             @include desktop {
                 margin-top: 0;
