--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -19,4 +19,5 @@ h1 {
  
 ul {
     margin-top: 0;
+    padding: 0;
 }
